--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@mcdex/mai3.js",
-  "version": "0.0.1",
+  "name": "@mcarloai/mai3.js",
+  "version": "0.0.2",
   "description": "Mai Protocol v3 JavaScript API",
   "homepage": "http://github.com/mcdexio/mai3.js",
   "author": "Zhu Tianchi <zhutianchi@mcarlo.com>",
