--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mcarloai/mai3.js",
-  "version": "0.2.20",
+  "version": "0.2.21",
   "description": "Mai Protocol v3 JavaScript API",
   "homepage": "http://github.com/mcarloai/mai3.js",
   "author": "Zhu Tianchi <zhutianchi@mcarlo.com>",
@@ -41,7 +41,7 @@
   "scripts": {
     "test": "jest --runInBand",
     "coverage": "jest --coverage",
-    "build": "tsc && cp src/wrapper/*.d.ts dist/wrapper",
+    "build": "tsc && cp src/abi/*.d.ts dist/abi",
     "start_testrpc": "npm install ganache-cli && (nohup ganache-cli -p 8545 -m \"diagram range remind capable strategy fragile midnight bunker garage ship predict curtain\" -g 1 -l 10000000 -e 100000000000000000000 -i 66 > /tmp/ganache-cli.run.log 2>&1 &)",
     "stop_testrpc": "kill $(ps aux|grep \"[d]iagram range remind capable\"|awk '{print $2}')",
     "deploy_contract": "chmod +x ./scripts/deploy_contract.sh && ./scripts/deploy_contract.sh",
