--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
   },
   "dependencies": {
     "bignumber.js": "~9.0.0",
-    "ethers": "^5.0.26",
-    "axios": "^0.19.2"
+    "ethers": "^5.0.26"
   },
   "prepare": "npm run build",
   "scripts": {
